--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Still empty, but working on it...
+---
+layout: default
+---
+
+<div class="home">
+
+I am a physicist turned structural biologist. I try to understand the limitations of simplified models in molecular biology and why what's true for <i>E. coli</i> is not necessarily true for an elephant.
+
+<br />
+<br />
+
+I interact with the environment using MX, EM, SAXS, and AI. Currently, a big data dweller, I don't do much experimental work anymore. Staff member at <a href="https://www.embl.org/sites/hamburg/">EMBL Hamburg</a>.
+
+<br />
+<br />
+
+Check my profiles at <a href="https://scholar.google.pl/citations?user=N7sQfAgAAAAJ&hl=en">google scholar</a>, <a href="https://gitlab.com/gchojnowski">gitlab</a>, and <a href="https://github.com/gchojnowski">github</a>, and <a href="https://bsky.app/profile/gchojnowski.bsky.social">bluesky</a>.
+
+
+
+</div>
